style: gap fix

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    gap:106px;
     justify-content: space-between;
 }
 
@@ -204,7 +205,6 @@ main {
 }
 
 footer {
-    margin-top: 106.42px;
     background-color: #FF9257;
     padding: 43px 128px 48px 118px;
     display: flex;
